--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
 
             <nav>
                 <section id="logo_holder">
-                    <a>Claire Igwe</a>
+                    <a href="#">Claire Igwe</a>
                     <button></button>
                 </section>
 
                 <section id="menu_container_close">
                 
                     <section class="nav_items">
-                        <a>My Work</a>
+                        <a href="#">My Work</a>
                         <a href="https://claireigwe.github.io/bio">My Story</a>
                     </section>
 
                     <section class="social_links">
-                        <a href="mailto:contact@claireigwe.com"><img src="Image/mail.png" alt="email icon"><p>Email</p></a>
-                        <a href="https://www.behance.net/claireigwe2"><img src="Image/behance.png" alt="behance icon"><p>Behance</p></a>
-                        <a href="https://www.linkedin.com/in/claire-igwe"><img src="Image/linkedin.png" alt="linkedin icon"><p>LinkedIn</p></a>
-                        <a href="https://www.twitter.com/claire_uxdesign"><img src="Image/twitter.png" alt="twitter icon"><p>Twitter</p></a>
+                        <a href="mailto:somiigwe@gmail.com" target="_blank"><img src="Image/mail.png" alt="email icon"><p>Email</p></a>
+                        <a href="https://www.behance.net/claireigwe2" target="_blank"><img src="Image/behance.png" alt="behance icon"><p>Behance</p></a>
+                        <a href="https://www.linkedin.com/in/claire-igwe" target="_blank"><img src="Image/linkedin.png" alt="linkedin icon"><p>LinkedIn</p></a>
+                        <a href="https://www.twitter.com/claire_uxdesign" target="_blank"><img src="Image/twitter.png" alt="twitter icon"><p>Twitter</p></a>
                     </section>
 
                 </section>
@@ -192,10 +192,10 @@
             </section>
 
             <section class="social_links2">
-                <a href="mailto:contact@claireigwe.com"><img src="Image/mail.png" alt="email icon"></a>
-                <a href="https://www.behance.net/claireigwe2"><img src="Image/behance.png" alt="behance icon"></a>
-                <a href="https://www.linkedin.com/in/claire-igwe"><img src="Image/linkedin.png" alt="linkedin icon"></a>
-                <a href="https://www.twitter.com/claire_uxdesign"><img src="Image/twitter.png" alt="twitter icon"></a>
+                <a href="mailto:somiigwe@gmail.com" target="_blank"><img src="Image/mail.png" alt="email icon"></a>
+                <a href="https://www.behance.net/claireigwe2" target="_blank"><img src="Image/behance.png" alt="behance icon"></a>
+                <a href="https://www.linkedin.com/in/claire-igwe" target="_blank"><img src="Image/linkedin.png" alt="linkedin icon"></a>
+                <a href="https://www.twitter.com/claire_uxdesign" target="_blank"><img src="Image/twitter.png" alt="twitter icon"></a>
             </section>
 
             <section class="banner1"></section>
