kipati got slight edits
done

--- a/clothes-xo/index.html
+++ b/clothes-xo/index.html
@@ -399,7 +399,7 @@
                 <section class="grid4">
                     <section id="clothesxocolor"></section>
 
-                    <section id="clothesxotypography" class="clothes_xo">
+                    <section id="typography" class="clothes_xo">
                         <p class="white_text">San-Serif, Modern</p>
     
                         <p class="white_text poppins">Poppins</p>
