--- a/immers/index.html
+++ b/immers/index.html
@@ -360,7 +360,7 @@
                 <section class="grid4">
                     <section id="immerscolor"></section>
 
-                    <section id="immerstypography" class="immers">
+                    <section id="typography" class="immers">
                         <p class="white_text">San-Serif, Modern</p>
     
                         <p class="white_text noto">Noto</p>
