--- a/clothes-xo/index.html
+++ b/clothes-xo/index.html
@@ -100,7 +100,7 @@
             </section>
             
             <section class="hero_title">
-                <h3>Figuring out Cloth Donation...</h3>
+                <h3 class="limit_width2">Figuring out Cloth Donation...</h3>
                 <p>Thinking up the Design Solution for Cloth Donors</p>
             </section>
 
