--- a/immers/index.html
+++ b/immers/index.html
@@ -100,7 +100,7 @@
             </section>
             
             <section class="hero_title">
-                <h3>Reimagining Fashion Shopping...</h3>
+                <h3 class="limit_width2">Reimagining Fashion Shopping...</h3>
                 <p>Thinking up the Design Solution for Cloth Donors</p>
             </section>
 
