--- a/kipati/index.html
+++ b/kipati/index.html
@@ -252,7 +252,7 @@
             </section>
             
             <section class="hero_title">
-                <h3>Decisions Reached from UX Research </h3>
+                <h3 class="limit_width2">Decisions Reached from UX Research</h3>
                 <p>Based on the insights gathered from interviewing compliance experts and business managers, I identified five (5) crucial factors that increase the risk of non-compliance.</p>
             </section>
 
@@ -459,7 +459,7 @@
                             <img src="../Images/kipati/layout.png">
                             <h5>Layouts</h5>
                         </section>
-                        <p>I recommended that the "filled" fields should display after "unfilled" one</p>
+                        <p>I recommended that the "filled" fields should display after "unfilled" ones</p>
                     </section>
 
                     <section class="grid2_item5">
