--- a/clothes-xo/index.html
+++ b/clothes-xo/index.html
@@ -43,9 +43,9 @@
 
             <section class="case_hero">
 
-                <section class="hero_image_clothesxo"></section>
+                <section class="hero_image_clothesxo fade"></section>
 
-                <section class="hero_title">  
+                <section class="hero_title enter_and_leave">  
                     <h2>Donate with absolute ease to clothe others on ClothesXO</h2>
                     <p>Donors no longer need to haul cloths to far-away donation points to get them to people in need. ClothesXO takes care of the big and small issues in cloth donations</p>
                 </section>
