--- a/immers/index.html
+++ b/immers/index.html
@@ -43,9 +43,9 @@
 
             <section class="case_hero">
 
-                <section class="hero_image_immers"></section>
+                <section class="hero_image_immers fade"></section>
 
-                <section class="hero_title">  
+                <section class="hero_title enter_and_leave">  
                     <h2>Try out cloths from anywhere on a VR Store, Immers</h2>
                     <p>With Immers, what you order is always what you get. Fashion shoppers can virtually try out cloths from their favorite stores, anywhere and anytime</p>
                 </section>
