--- a/kipati/index.html
+++ b/kipati/index.html
@@ -43,9 +43,9 @@
 
             <section class="case_hero">
 
-                <section class="hero_image_kipati"></section>
+                <section class="hero_image_kipati fade"></section>
 
-                <section class="hero_title">  
+                <section class="hero_title enter_and_leave">  
                     <h2>Optimize Business Compliance from one SaaS, Kipati</h2>
                     <p>Businesses lose millions to avoidable compliance failures because they struggle and fail to joggle multiple compliance requirements and stakeholder. Kipati was designed to tackle</p>
                 </section>
