--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <section class="hero_container">
 
-                    <section class="title1">
+                    <section class="title1 enter_and_leave">
                         <h1>Winning Products make Users Happy...</h1>
                         <p>I help businesses turn complex requirements into profitable digital products that are delightful to use. My thing is designing beautiful UI prototypes that are enjoyable to use, without straining your dev team</p>
                     </section>
@@ -130,7 +130,7 @@
                     <section class="title2">
                         <section class="tag_container">
                             <p class="tags">Prototyping</p>
-                            <p class="tags">Responsive UI</p>
+                            <p class="tags ">Responsive UI</p>
                             <p class="tags">Design Sprints and Hand-Offs</p>
                         </section>
                         <h3>Real Estate Payment SaaS - Automating installments</h3>
@@ -171,8 +171,8 @@
             </section>-->
 
             <section class="section3 team_container">
-                <h4>My Product Design Stack...</h4>
-                <marquee scrollamount="4">
+                <h4 class="">My Product Design Stack...</h4>
+                <section>
                     <section id="teams2">
                     <img src="Image/Frame 2.png">
                     <img src="Image/Frame 3.png">
@@ -180,7 +180,7 @@
                     <img src="Image/Frame 4.png">
                     <img src="Image/Maze.png">
                     </section>
-                </marquee>
+                </section>
             </section>
 
         </section>
