--- a/immers/index.html
+++ b/immers/index.html
@@ -314,31 +314,31 @@
 
             <section class="image1 immers prototype snap_type">
                 
-                <section class="snap_align">
+                <section class="snap_align slide7">
                     <img src="../Images/immers/low_fi/immers_logo.png">
                 </section>
 
-                <section class="snap_align">
+                <section class="snap_align slide7">
                     <img src="../Images/immers/low_fi/Onboarding.png">
                 </section>
 
-                <section class="snap_align">
+                <section class="snap_align slide7">
                     <img src="../Images/immers/low_fi/Sign Up.png">
                 </section>
 
-                <section class="snap_align">
+                <section class="snap_align slide7">
                     <img src="../Images/immers/low_fi/Login.png">
                 </section>
 
-                <section class="snap_align">
+                <section class="snap_align slide7">
                     <img src="../Images/immers/low_fi/Home page.png">
                 </section>
 
-                <section class="snap_align">
+                <section class="snap_align slide7">
                     <img src="../Images/immers/low_fi/Create Personaity.png">
                 </section>
 
-                <section class="snap_align">
+                <section class="snap_align slide7">
                     <img src="../Images/immers/low_fi/Create personality.png">
                 </section>
             </section>
@@ -385,59 +385,59 @@
 
             <section class="image1 immers prototype overflow snap_type">
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/1.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/2.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/3.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/4.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/5.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/6.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/7.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/8.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/9.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/10.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/11.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/12.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/13.png">
                 </section>
 
-                <section class="snap_align sticky">
+                <section class="snap_align sticky slide">
                     <img src="../Images/immers/hi_fi/14.png">
                 </section>
 
