Animate and co.
go

--- a/immers/index.html
+++ b/immers/index.html
@@ -25,7 +25,7 @@
                 <section id="menu_container_close">
                 
                     <section class="nav_items">
-                        <a href="https://claireigwe.github.io">My Work</a>
+                        <a href="https://claireigwe.github.io">Work</a>
                         <!--<a href="https://claireigwe.github.io/bio">My Story</a>-->
                     </section>
 
@@ -39,15 +39,20 @@
             </nav>
         </header>
 
+        <section class="loader_immers">
+            <section></section>
+            <section></section>
+        </section>
+
         <section class="page_content">
 
             <section class="case_hero">
 
                 <section class="hero_image_immers fade"></section>
 
-                <section class="hero_title enter_and_leave">  
-                    <h2>Try out cloths from anywhere on a VR Store, Immers</h2>
-                    <p>With Immers, what you order is always what you get. Fashion shoppers can virtually try out cloths from their favorite stores, anywhere and anytime</p>
+                <section class="hero_title">  
+                    <h2 class="enter_and_leave">Try out cloths from anywhere on a VR Store, Immers</h2>
+                    <p class="enter_and_leave">With Immers, what you order is always what you get. Fashion shoppers can virtually try out cloths from their favorite stores, anywhere and anytime</p>
                 </section>
             
                 <section class="cards">
