--- a/clothes-xo/index.html
+++ b/clothes-xo/index.html
@@ -9,8 +9,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&family=Space+Grotesk:wght@300;400;500;600;700&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../style.css">
-            
-
     </head>
 
     <body>
@@ -25,8 +23,8 @@
                 <section id="menu_container_close">
                 
                     <section class="nav_items">
-                        <a href="https://claireigwe.github.io">My Work</a>
-                        <!--<a href="https://claireigwe.github.io/bio">My Story</a>-->
+                        <a href="https://claireigwe.github.io">Work</a>
+                        <!--<a href="https://claireigwe.github.io/bio">Bio</a>-->
                     </section>
 
                     <section class="social_links">
@@ -38,6 +36,11 @@
                 </section>
             </nav>
         </header>
+
+        <section class="loader_clothesxo">
+            <section></section>
+            <section></section>
+        </section>
 
         <section class="page_content">
 
