--- a/kipati/index.html
+++ b/kipati/index.html
@@ -25,8 +25,8 @@
                 <section id="menu_container_close">
                 
                     <section class="nav_items">
-                        <a href="https://claireigwe.github.io">My Work</a>
-                        <!--<a href="https://claireigwe.github.io/bio">My Story</a>-->
+                        <a href="https://claireigwe.github.io">Work</a>
+                        <!--<a href="https://claireigwe.github.io/bio">Bio</a>-->
                     </section>
 
                     <section class="social_links">
@@ -38,6 +38,11 @@
                 </section>
             </nav>
         </header>
+
+        <section class="loader_kipati">
+            <section></section>
+            <section></section>
+        </section>
 
         <section class="page_content">
 
