--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
                     <section class="nav_items">
                         <a href="#">Work</a>
-                        <!--<a href="https://claireigwe.github.io/bio">My Story</a>-->
+                        <a href="https://claireigwe.github.io/bio">Bio</a>
                     </section>
 
                     <section class="social_links">
@@ -49,8 +49,8 @@
                 <section class="hero_container">
 
                     <section class="enter_and_leave">
-                        <h1>Winning Products make Users Happy...</h1>
-                        <p>I help businesses turn complex requirements into profitable digital products that are delightful to use. My thing is designing beautiful UI prototypes that are enjoyable to use, without straining your dev team</p>
+                        <h1>Designing Delightful Digital Product...</h1>
+                        <p>I turn complex requirements into profitable digital products that users love, designing beautiful UI prototypes that are enjoyable to use without straining your dev team</p>
                     </section>
                 
                 </section>
