--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </section>
 
             <section class="section3 team_container">
-                <h4>I've worked with teams building the future...</h4>
+                <h4>Worked on teams building the future...</h4>
                     <section id="teams">
                         <img src="Image/hertechtrail.png">
                         <img src="Image/ishopeco.png">
