--- a/kipati/index.html
+++ b/kipati/index.html
@@ -52,7 +52,7 @@
 
                 <section class="hero_title enter_and_leave">  
                     <h2>Optimize Business Compliance from one SaaS, Kipati</h2>
-                    <p>Businesses lose millions to avoidable compliance failures because they struggle and fail to joggle multiple compliance requirements and stakeholder. Kipati was designed to tackle</p>
+                    <p>Businesses lose millions to avoidable compliance failures because they struggle and fail to joggle multiple compliance requirements and stakeholder. Kipati was designed to tackle this challenge</p>
                 </section>
             
                 <section class="cards">
