--- a/clothes-xo/index.html
+++ b/clothes-xo/index.html
@@ -24,7 +24,7 @@
                 
                     <section class="nav_items">
                         <a href="https://claireigwe.github.io">Work</a>
-                        <!--<a href="https://claireigwe.github.io/bio">Bio</a>-->
+                        <a href="https://claireigwe.github.io/bio">Bio</a>
                     </section>
 
                     <section class="social_links">
