--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 <section class="hero_container">
 
                     <section class="enter_and_leave">
-                        <h2>Designing Delightful Digital Product...</h2>
+                        <h2>Designing Delightful Digital Products...</h2>
                         <p>I turn complex requirements into profitable digital products that users love, designing beautiful UI prototypes that are enjoyable to use without straining your dev team</p>
                     </section>
                 
@@ -65,7 +65,7 @@
             </section>
 
             <section class="section3 team_container">
-                <h4>I've worked with teams building the future...</h4>
+                <h4>Worked on teams building the future...</h4>
                     <section id="teams">
                         <img src="Image/hertechtrail.png">
                         <img src="Image/ishopeco.png">
@@ -177,15 +177,7 @@
 
             <section class="section3 team_container">
                 <h4 class="">My Product Design Stack...</h4>
-                <section id="move">
                     <section id="teams2">
-                        <img src="Image/Frame 2.png">
-                        <img src="Image/Frame 3.png">
-                        <img src="Image/Frame 1.png">
-                        <img src="Image/Frame 4.png">
-                        <img src="Image/Maze.png">
-                    </section>
-                    <section id="teams3">
                         <img src="Image/Frame 2.png">
                         <img src="Image/Frame 3.png">
                         <img src="Image/Frame 1.png">
