--- a/index.html
+++ b/index.html
@@ -177,12 +177,35 @@
 
             <section class="section3 team_container">
                 <h4 class="">My Product Design Stack...</h4>
-                    <section id="teams2">
+                <section id="grow">
+                    <section>
+                        <img src="Image/Frame 1.png">
                         <img src="Image/Frame 2.png">
                         <img src="Image/Frame 3.png">
-                        <img src="Image/Frame 1.png">
+                    </section>
+
+                    <section>
+                        <img src="Image/Frame 2.png">
+                        <img src="Image/Frame 3.png">
+                        <img src="Image/Frame 4.png">
+                    </section>
+
+                    <section>
+                        <img src="Image/Frame 3.png">
                         <img src="Image/Frame 4.png">
                         <img src="Image/Maze.png">
+                    </section>
+
+                    <section>
+                        <img src="Image/Frame 4.png">
+                        <img src="Image/Maze.png">
+                        <img src="Image/Frame 1.png">
+                    </section>
+
+                    <section>
+                        <img src="Image/Maze.png">
+                        <img src="Image/Frame 1.png">
+                        <img src="Image/Frame 2.png">
                     </section>
                 </section>
             </section>
