--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             </section>
 
-            <section class="section3 team_container">
+            <section class="section3">
                 <h4>Worked on teams building the future...</h4>
                     <section id="teams">
                         <img src="Image/hertechtrail.png">
